AdminTool/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admintool
  namespace: admintool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admintool
  template:
    metadata:
      labels:
        app: admintool
    spec:
      containers:
        - name: admintool
          image: admintool-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data-protection
              mountPath: /root/.aspnet/DataProtection-Keys
      volumes:
        - name: data-protection
          emptyDir: {}
