AdminTool/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admintool
  namespace: admintool
spec:
  selector:
    app: admintool
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
